<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp">
    <EditText
        android:id="@+id/first_num"
        style="@style/CustomEditText"
        android:hint="@string/first_number"
        />
    <EditText
        android:id="@+id/second_num"
        style="@style/CustomEditText"
        android:hint="@string/second_number"/>
    <LinearLayout
        style="@style/CustomEditText"
        android:baselineAligned="true"
        android:padding="0dp"
        android:weightSum="4">
        <Button
            android:id="@+id/add_button"
            style="@style/CustomButtonAttr"
            android:text="@string/add"/>
        <Button
            android:id="@+id/subtract_button"
            style="@style/CustomButtonAttr"
            android:text="@string/subtract"/>
        <Button
            android:id="@+id/multiply_button"
            style="@style/CustomButtonAttr"
            android:text="@string/multiply"/>
        <Button
            android:id="@+id/divide_button"
            style="@style/CustomButtonAttr"
            android:text="@string/divide"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_top"
        android:textSize="60dp"
        android:textColor="@android:color/black"
        android:text="0"
        android:layout_gravity="center"/>

</LinearLayout>