<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/gradient_bg_violet">


    <TextView
        style="@style/ActivityTitle"
        android:text="Register Activity"
       />

    <EditText
        android:id="@+id/edit_text_name"
        style="@style/CustomEditText"
        android:background="@drawable/transparent_bg"
        android:hint="@string/name_register_hint"/>
    <EditText
        android:id="@+id/edit_text_email"
        android:background="@drawable/transparent_bg"
        style="@style/CustomEditText"
        android:hint="@string/email_register_hint"/>
    <EditText
        android:id="@+id/edit_text_password"
        android:background="@drawable/transparent_bg"
        style="@style/CustomEditText"
        android:hint="@string/password_register_hint"/>

    <Button
        android:id="@+id/register_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_top"
        android:background="@drawable/button_round_corner"
        android:textColor="@android:color/white"
        android:text="Register"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/default_margin_top"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textColor="#f5f5f5"
            android:layout_marginRight="5dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/already_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/have_account"
            android:layout_centerHorizontal="true"
            android:text="@string/click_here" />

    </LinearLayout>




</LinearLayout>